--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         <h3
           class="pt-8 text-lg font-semibold uppercase text-primary group-hover:text-yellow lg:text-xl"
         >
-          Grafik Tasarım
+          Grafik Tasarıms
         </h3>
        
       </div>
