--- a/index.html
+++ b/index.html
@@ -857,3 +857,19 @@
     
   </body>
 </html>
+
+
+
+
+
+
+
+
+try:
+    # Potansiyel hata üretebilecek kod buraya yazılır
+    # Bu kodun çalışması sırasında hata oluşursa, program buradan çıkarak except bloğuna geçer
+except ExceptionType:
+    # Hata oluştuğunda yapılacak işlemler buraya yazılır
+    # Bu blokta hata türüne bağlı olarak uygun bir işlem yapılabilir
+finally:
+    # Opsiyonel olarak, her durumda çalışmasını istediğiniz kod buraya yazılabilir
